<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_status"
        android:title="@string/action_status"
        app:showAsAction="always"
        app:actionViewClass="android.widget.TextView"/>
    <item
        android:id="@+id/action_cancel"
        android:title="@string/action_cancel"
        android:icon="@drawable/ic_action_cancel"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/label_share"
        android:visible="false"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:icon="@drawable/ic_action_backspace"
        app:showAsAction="ifRoom"/>
</menu>
